Bug: 84693 - Subject truncated Re-enable ellipsis for subject.
http://bugzilla.zimbra.com/show_bug.cgi?id=84693

Copied from Perforce
 Change: 487870

--- a/WebRoot/t/resources/sass/widgets/mail/_ztconvlistview.scss
+++ b/WebRoot/t/resources/sass/widgets/mail/_ztconvlistview.scss
@@ -99,10 +99,8 @@ $zcs-mail-dateWidth: 5.5em;
 
 .zcs-mail-subject {
 	@extend .zcs-mail-list-item;
-	/**
 	@include ellipsis();
-	**/
-	overflow:hidden;
+	//overflow:hidden;
 	max-height: 18px;
 	font-size: 1em;
 	left: $zcs-mail-indent;
